# SDL2-2D-Game-Plataform

./: CMakeLists.txt  README.md  main.cpp
header_file/: Event.hpp  Rect.hpp  TileMap.hpp  Window.hpp  WindowBase.hpp
source_file/: Event.cpp  Rect.cpp  TileMap.cpp  Window.cpp  WindowBase.cpp
